@@ -84,8 +84,9 @@ public class DefaultHelpCommand extends CompositeCommand {
         // Process depth parameter (0 = top level, increases for sub-commands)
         int depth = 0;
         if (args.size() == 1) {
-            if (NumberUtils.isDigits(args.get(0))) {
-                depth = Optional.ofNullable(args.get(0)).map(NumberUtils::toInt).orElse(-1);
+            if (NumberUtils.isDigits(args.getFirst())) {
+                // Converts first argument into an int, or returns -1 if it cannot. Avoids exceptions.
+                depth = Optional.ofNullable(args.getFirst()).map(NumberUtils::toInt).orElse(-1);
             } else {
                 // Show basic syntax help if argument isn't a valid depth
                 String usage = parent.getUsage();
