@@ -45,9 +45,9 @@ public class AdminSetrankCommand extends CompositeCommand {
             return false;
         }
         // Get target player
-        targetUUID = Util.getUUID(args.get(0));
+        targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Get rank
@@ -91,6 +91,7 @@ public class AdminSetrankCommand extends CompositeCommand {
 
     @Override
     public boolean execute(User user, String label, List<String> args) {
+        assert targetUUID != null;
         User target = User.getInstance(targetUUID);
         Island island;
         if (ownerUUID != null) {
