@@ -2,10 +2,7 @@ package world.bentobox.bentobox.api.commands.admin.blueprints;
 
 import java.io.File;
 import java.io.FilenameFilter;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import world.bentobox.bentobox.api.commands.CompositeCommand;
 import world.bentobox.bentobox.api.user.User;
@@ -39,7 +36,7 @@ public class AdminBlueprintLoadCommand extends CompositeCommand {
         AdminBlueprintCommand parent = (AdminBlueprintCommand) getParent();
 
         BlueprintClipboardManager bp = new BlueprintClipboardManager(getPlugin(), parent.getBlueprintsFolder());
-        if (bp.load(user, Util.sanitizeInput(args.get(0)))) {
+        if (bp.load(user, Util.sanitizeInput(args.getFirst()))) {
             parent.getClipboards().put(user.getUniqueId(), bp.getClipboard());
             return true;
         }
@@ -53,10 +50,10 @@ public class AdminBlueprintLoadCommand extends CompositeCommand {
         AdminBlueprintCommand parent = (AdminBlueprintCommand) getParent();
         File folder = parent.getBlueprintsFolder();
         if (folder.exists()) {
-            options = Arrays.asList(folder.list(BLUEPRINT_FILTER)).stream().map(n -> n.substring(0, n.length() - 4)) // remove .blu from filename
+            options = Arrays.stream(Objects.requireNonNull(folder.list(BLUEPRINT_FILTER))).map(n -> n.substring(0, n.length() - 4)) // remove .blu from filename
                     .toList();
         }
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
 
         return Optional.of(Util.tabLimit(options, lastArg));
     }
