@@ -51,7 +51,7 @@ public class AdminRangeAddCommand extends AbstractAdminRangeCommand {
                 .protectionRange(newRange, oldRange).build();
 
         user.sendMessage("commands.admin.range.add.success",
-                TextVariables.NAME, args.get(0), TextVariables.NUMBER, args.get(1),
+                TextVariables.NAME, args.getFirst(), TextVariables.NUMBER, args.get(1),
                 "[total]", String.valueOf(newRange));
 
         return true;
